 - Text editor
 - Alternative scrollbar (Uses themes instead of system grey, looks better then default )
 - Option to change select background color
 - Updated themes
 - New sumbmenu - "Tools"
 - Log viewer, accessible from tool submenu
 - Text finder dialog - bound on <Control-f>
### Changed
 - Hyperlink manager won't accept words with top level domains in the middle, e.g. ex-.com-ample


## Client[1.09] - 2016-2-19
### Added
 - Font menu displays current font
 - Preview font with left click in font list and "Up" / "Down" arrows
 - Font style selection (Normal, Bold, Italic)
### Changed
 - "Apply" button in font menu changes chat menu too now, "Save" does the same + saves the change in settings.ini
 - Saves font name instead of a font list number
### Fix
 - Won't append empty lines to settings.ini when a text setting is not used

## Server[1.03] - 2016-2-18
### Fixed
 - Server accepts files again



## Client[1.08] - 2016-2-17
### Added
 - Received message buffer (can receive and process long messages)
 - New menu option - "Use system scrollbar" (Switches between tk and ttk scrollbars)
 - New menu option - "Entry widget border width"
 - New menu option - "Text widget border width"
 - New menu option - "Scrollbar widget border width"
 - New blue theme
### Changed
 - Replaced "Hide user box" with "Show user box" to increase intuitiveness
 - Improved theme menu and themes

## Server[1.02] - 2016-2-17
### Added
 - Added a received message buffer (can receive and process long messages)
### Changed
 - eventThread sleep timer is no longer 0.05 sec. Now it changes dynamically when a new user joins. Current formula is 0.05 sec. + 0.002 sec. for every connected user (Up to 2 sec. ar 1000 users)


## Client[1.07] - 2016-2-16
### Added
 - Themes
 - Theme options
 - Autocomplete commands
 - New command - /join (Opens server join window)
 - New command - /ljoin (Joins last server)
 - New command - /leave (Leaves server)
 - New command - /quit (Closes this application)